# bty

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  PLAN.md  README.md  args.go  bty.go  bty.json  bty.py  config.go  handlers.go  install.tmpl  main.go  permissions.sh  pxeconfig.tmpl  pyproject.toml  sample.json  state.go
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  media.yml  release.yml
args/: args.go
assets/: wui.html
assets/templates/: pxe-c115200.cfg  pxe-c57600.cfg
bty/: __init__.py  app.py  bty.py  installer.tmpl
bty-media/: Makefile  README.md
bty-media/auxiliary/: ipxe-embed.ipxe  ipxe-local-general.h
bty-media/configs/: server.toml  usb.toml
bty-media/live-build/auto/: config
bty-media/live-build/config/hooks/binary/: 0500-bty-skip-bootloader-menu.hook.binary
bty-media/live-build/config/hooks/normal/: 0500-bty-install.hook.chroot  (+9 more)
bty-media/live-build/config/package-lists/: bty-base.list.chroot  bty-base.list.chroot_amd64  bty-base.list.chroot_arm64  bty-flash.list.chroot  bty-plymouth.list.chroot.usb  bty-ramboot.list.chroot
bty-media/live-build/config/preferences/: backports.pref.binary  backports.pref.chroot
bty-media/rootfs/server/etc/: issue  motd
bty-media/rootfs/usb/etc/: issue  overlayroot.conf
bty-media/scripts/: bty_wheel_stage.py  diskimage_build.py  gen_userdata.py  img_zst_publish.py  live_build.py  pack_rpi_img.py
bty-media/tasks/: build.yaml  live.yaml
bty-py/: __init__.py
bty/templates/: bootstrap.sh  bootstrap_cancel.sh  pxe-c115200-pti.cfg  pxe-c115200.cfg  pxe-c57600.cfg  pxe-skip.cfg  ui.html  ui_cfg.html  ui_machines.html  ui_state.html
bzi/: bzi.go
cfg/: sample.json
cijoe/configs/: live-x86.toml  live.toml  netboot-pc.toml  netboot-x86.toml  ramboot-init.toml  server-rpi.toml  server-x86.toml  server.toml  test-pxe.toml  test-usb-grow.toml  test-usb-ventoy.toml  usb-iso.toml  usb-rpi.toml  usb-x86.toml  usb.toml  usbboot-pc.toml  usbboot-rpi.toml
cijoe/scripts/: bty_ipxe_build.py  bty_wheel_stage.py  diskimage_build.py  gen_userdata.py  img_gz_publish.py  img_zst_publish.py  live_build.py  pxe_customize_server.py  pxe_prepare.py  pxe_run_chain_test.py  ramboot_init_build.py  rpi_image_customize.py  rpios_image_build.py  usb_grow_assert.py  usb_grow_stage.py  usb_grow_test.py  usb_iso_build.py  usb_rpi_build.py  usb_ventoy_guest_start.py  usb_ventoy_stage.py
cijoe/tasks/: build-rpi.yaml  build.yaml  live.yaml  netboot-pc.yaml  netboot.yaml  ramboot-init.yaml  test-pxe.yaml  test-usb-grow.yaml  test-usb-ventoy.yaml  usb-rpi.yaml  usb.yaml  usbboot-pc.yaml  usbboot-rpi.yaml
conf/: conf.go
deploy/: README.md  compose.yml
deploy/quadlet/: bty-tftp.container  bty-web.container  nbdmux.container  withcache.container
deploy/tftp/: Containerfile  entrypoint.sh
deploy/tftp/seed/: .gitkeep
docker/: Dockerfile  dnsmasq.conf  docker-compose.yml  entrypoint.sh
docker/seed/: .gitkeep
docs/: README.md
docs/asciinema/: README.md  usb-build.sh  usb-flash-cli.sh  usb-flash-tui.md
docs/src/: changelog.md  ci.md  components.md  concepts.md  conf.py  dependencies.md  flows.md  index.md  operations.md  overview.md  quickstart.md  reference.md  related.md  walkthrough-catalog.md  walkthrough-image-store.md  walkthrough-ramboot.md  walkthrough-server-docker.md  walkthrough-server.md  walkthrough-storage-disk.md  walkthrough-usb.md
docs/src/tutorials/: bmc.md  bty-lab-deploy.md  bty-netboot-pc.md  bty-netboot.md  bty-usb-rpi.md  bty-usb.md  bty-usbboot-pc.md  bty-usbboot-rpi.md  bty-ventoy.md  jetkvm.md  pikvm.md  ventoy.md
docs/tooling/: README.md  pyproject.toml
docs/tooling/src/bty_docs/: __init__.py  cli.py
finf/: finf.go
handlers/: handlers.go
machine/: machine.go
osi/: osi.go
pxe/: pxe.go
scripts/: generate_catalog_toml.py  install-dev-deps.sh  starter_catalog.toml.in
src/bty/: __init__.py  catalog.py  cli.py  client.py  deploy.py  disks.py  flash.py  formatting.py  ghcr.py  images.py  oras.py
src/bty/pxe/: __init__.py  _daemon.py  _events.py  proxy.py  tftp.py  wire.py
src/bty/templates/: pxe-c115200-pti.cfg  pxe-c57600.cfg
src/bty/tui/: __init__.py  _app.py
src/bty/web/: __init__.py  _app.py  _auth.py  _backup.py  _catalog.py  _config.py  _db.py  _events.py  _events_log.py  _hash.py  _helpers.py  _jobs.py  _labels.py  _models.py  _portability.py  _ramboot.py  _ramboot_cache.py  _recovery.py  _release_mgr.py  _releases.py  _reqctx.py  _routes_backups.py  _routes_catalog.py  _routes_events.py  _routes_releases.py  _security.py  _settings_store.py  _sysconfig.py  _table_state.py  _task.py  _ui.py  _withcache.py  _withcache_catalog.py  _workflow.py
src/bty/web/_static/: README.md  bty-utils.js
src/bty/web/_templates/: ipxe.j2  ipxe_flash.j2  ipxe_ramboot.j2  ipxe_sanboot.j2  ipxe_tui.j2  ipxe_unknown.j2  pxe_bootstrap.j2
state/: state.go
templates/: bootstrap.sh  pxe.cfg  ui.tmpl
testdata/osis/: u1604-base.qcow2.md5  u1604-mini.qcow2.md5  u1604-qatd.qcow2.md5  u1604-wrks.qcow2.md5
testdata/pxelinux.cfg/: 01-08-62-66-a4-66-38  01-0c-c4-7a-9a-c9-d6  01-0c-c4-7a-9b-63-68  01-0c-c4-7a-9b-63-6e  01-2c-56-dc-dd-51-d4  01-70-85-c2-6d-5d-4e  01-9c-5c-8e-53-50-c5  01-ac-1f-6b-1e-af-fa  01-ac-1f-6b-1e-af-fb  01-ac-1f-6b-1e-b0-7f  01-d0-50-99-91-31-cd  default
tests/: conftest.py  test_catalog.py  test_cli.py  test_cli_auth.py  test_consistency.py  test_ctl_auth.py  test_deploy.py  test_deploy_integration.py  test_disks.py  test_e2e.py  test_flash.py  test_flash_integration.py  test_flash_on_boot.py  test_formatting.py  test_ghcr.py  test_images.py  test_oras.py  test_pack_rpi_img.py  test_pxe_daemon.py  test_pxe_events.py  test_pxe_proxy.py  test_pxe_tftp.py  test_smoke.py  test_state_init.py  test_table_state.py  test_tui.py  test_usb_grow_integration.py  test_web.py  test_web_auth.py  test_web_backup_manager.py  test_web_boot_state.py  test_web_catalog_manager.py  test_web_config.py  test_web_db.py  test_web_display_tz.py  test_web_events.py  test_web_events_log.py  test_web_hash_manager.py  test_web_jobs.py  test_web_labels.py  (+14 more)
(+87 files in other folders)
