[project]
name = "bty-lab"
version = "0.1.3"
description = "Boot & Target Utility - image flashing and provisioning for bare-metal systems"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Simon A. F. Lund", email = "os@safl.dk" }]
license = "GPL-3.0-only"
keywords = ["provisioning", "imaging", "ipxe", "flashing", "appliance"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.80"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    # Required by FastAPI's ``Form()`` parsing for the bty-web UI.
    "python-multipart>=0.0.9",
]
all = [
    "textual>=0.80",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
bty = "bty.cli:main"
bty-tui = "bty.tui:main"
bty-web = "bty.web:main"

[project.urls]
Homepage = "https://safl.dk/bty/"
Documentation = "https://safl.dk/bty/"
Repository = "https://github.com/safl/bty"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bty"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
    # FastAPI's TestClient under the hood uses httpx; it isn't pulled
    # in by `fastapi` itself.
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "docs/tooling/src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
mypy_path = "src"

[tool.pyright]
include = ["src", "tests", "docs/tooling/src"]
extraPaths = ["src", "docs/tooling/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that exercise real subprocesses / kernel features (loop devices, etc.); require root and run separately in CI",
]
# Default run excludes integration tests so dev loops stay fast.
# Run them explicitly with: pytest -m integration  (must be root for losetup).
addopts = ["-m", "not integration"]
